force-app/main/default/objects/Contact/fields/Account_FSCCH__c.field-meta.xml
<CustomField>
    <fullName>Account_FSCCH__c</fullName>
    <description>FSC</description>
    <label>Account FSCCH</label>
    <length>100</length>
    <type>Text</type>
</CustomField>