force-app/main/default/objects/Contact/fields/Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Active_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>&quot;Unchecked&quot; means the Contact is no longer viable -- no longer at the company, etc.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>