force-app/main/default/objects/Contact/fields/Auditor__c.field-meta.xml
<CustomField>
    <fullName>Auditor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auditor</label>
    <type>Checkbox</type>
</CustomField>