force-app/main/default/objects/Contact/fields/Auditor_Department_List__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Department_List__c</fullName>
    <description>Temp field to hold DMS auditor ID during data migration process. Field can be deleted once the migration of auditor is completed.</description>
    <label>Auditor Department List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>