force-app/main/default/objects/Contact/fields/Contact_FSCCH__c.field-meta.xml
<CustomField>
    <fullName>Contact_FSCCH__c</fullName>
    <description>FSC</description>
    <label>Contact FSCCH</label>
    <length>100</length>
    <type>Text</type>
</CustomField>