force-app/main/default/objects/Contact/fields/DataMigration__c.field-meta.xml
<CustomField>
    <fullName>DataMigration__c</fullName>
    <label>DataMigration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>