force-app/main/default/objects/Contact/fields/DMS_Auditor_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Auditor_Id__c</fullName>
    <label>DMS Auditor Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>