force-app/main/default/objects/Contact/fields/DMS_Company__c.field-meta.xml
<CustomField>
    <fullName>DMS_Company__c</fullName>
    <label>DMS Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>