force-app/main/default/objects/Contact/fields/DMS_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Contact_Id__c</fullName>
    <externalId>true</externalId>
    <label>DMS Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>