force-app/main/default/objects/Contact/fields/DMS_Email__c.field-meta.xml
<CustomField>
    <fullName>DMS_Email__c</fullName>
    <label>DMS Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>