force-app/main/default/objects/Contact/fields/DMS_Fax__c.field-meta.xml
<CustomField>
    <fullName>DMS_Fax__c</fullName>
    <label>DMS Fax</label>
    <length>200</length>
    <type>Text</type>
</CustomField>