force-app/main/default/objects/Contact/fields/Email_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounce__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if email bounced.</inlineHelpText>
    <label>Email Bounce</label>
    <type>Checkbox</type>
</CustomField>