force-app/main/default/objects/Contact/fields/Email_Bounce_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounce_Date__c</fullName>
    <inlineHelpText>Date email is sent and bounced. This may be integrated with hubspot</inlineHelpText>
    <label>Email Bounce Date</label>
    <type>Date</type>
</CustomField>