force-app/main/default/objects/Contact/fields/External_Reports_To_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Reports_To_Id__c</fullName>
    <formula>ReportsTo.External_Record_Id__c</formula>
    <label>External Reports To Id</label>
    <type>Text</type>
</CustomField>