force-app/main/default/objects/Contact/fields/inspire1__Chatter_Free_User_Id__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Chatter_Free_User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chatter Free User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>