force-app/main/default/objects/Contact/fields/Is_Internal_Auditor__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal_Auditor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Internal Auditor</label>
    <type>Checkbox</type>
</CustomField>