force-app/main/default/objects/Contact/fields/Lead_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Details__c</fullName>
    <label>Lead Source Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>