force-app/main/default/objects/Contact/fields/Main_Services_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Main_Services_of_Interest__c</fullName>
    <label>Main Services of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Main_Services_of_Interest</valueSetName>
    </valueSet>
</CustomField>