force-app/main/default/objects/Contact/fields/Marketing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Notes__c</fullName>
    <label>Lead Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>