force-app/main/default/objects/Contact/fields/MQL__c.field-meta.xml
<CustomField>
    <fullName>MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added this field as per Case : 00001106</description>
    <label>MQL</label>
    <type>Checkbox</type>
</CustomField>