force-app/main/default/objects/Contact/fields/Primary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts (Primary Campaign)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>