force-app/main/default/objects/Contact/fields/Program_Schemes__c.field-meta.xml
<CustomField>
    <fullName>Program_Schemes__c</fullName>
    <label>Program Schemes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bonsucro</fullName>
            </value>
            <value>
                <fullName>CAFÉ</fullName>
            </value>
            <value>
                <fullName>EFI</fullName>
            </value>
            <value>
                <fullName>FSC</fullName>
            </value>
            <value>
                <fullName>FTUSA</fullName>
            </value>
            <value>
                <fullName>GMP</fullName>
            </value>
            <value>
                <fullName>HAACP</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>RA</fullName>
            </value>
            <value>
                <fullName>RSPO</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>UTZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>