force-app/main/default/objects/Contact/fields/Recent_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Recent_Lead_Source__c</fullName>
    <label>Recent Lead Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>