force-app/main/default/objects/Contact/fields/Recent_Lead_Source_p__c.field-meta.xml
<CustomField>
    <fullName>Recent_Lead_Source_p__c</fullName>
    <label>Recent Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Web_Traffic_Source</valueSetName>
    </valueSet>
</CustomField>