force-app/main/default/objects/Contact/fields/Standards__c.field-meta.xml
<CustomField>
    <fullName>Standards__c</fullName>
    <label>Standards</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SG 001</fullName>
            </value>
            <value>
                <fullName>LCSEA 002</fullName>
            </value>
            <value>
                <fullName>RFM 003</fullName>
            </value>
            <value>
                <fullName>Jewelry 007</fullName>
            </value>
            <value>
                <fullName>Diamonds 007</fullName>
            </value>
            <value>
                <fullName>Gold 007</fullName>
            </value>
            <value>
                <fullName>LCACN 108</fullName>
            </value>
            <value>
                <fullName>ZW 110</fullName>
            </value>
            <value>
                <fullName>Starbucks Dairy</fullName>
            </value>
            <value>
                <fullName>WAVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>