force-app/main/default/objects/Contact/fields/Todays_Date__c.field-meta.xml
<CustomField>
    <fullName>Todays_Date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Todays Date</label>
    <type>Date</type>
</CustomField>