force-app/main/default/objects/Contact/recordTypes/Auditor.recordType-meta.xml
<RecordType>
    <fullName>Auditor</fullName>
    <active>true</active>
    <label>Auditor</label>
</RecordType>